Implement mongo repository and tests